# smarthub-backend

./: .gitignore  Cargo.toml  Cross.toml  Database.db  Dockerfile  README.md  config.toml  crossbuild.sh  rustfmt.toml
migrations/2023-12-27-003510_user_users/: down.sql  up.sql
migrations/2023-12-27-003638_user_actions/: down.sql  up.sql
migrations/2023-12-27-003838_user_requests/: down.sql  up.sql
migrations/2023-12-27-003853_user_rfid/: down.sql  up.sql
migrations/2023-12-27-162454_constants/: down.sql  up.sql
migrations/2024-01-10-173940_user_users/: up.sql
src/: app.rs  config.rs  log.rs  main.rs  schema.rs
src/api/: actions.rs  constants.rs  info.rs  led.rs  mod.rs  requests.rs  system.rs  users.rs  websocket.rs
src/common/: db.rs  error.rs  mod.rs  unix.rs  utils.rs
src/enums/: dbus_command.rs  led_type.rs  mod.rs  system_command.rs
src/handlers/: bluetooth_handler.rs  connection_handler.rs  database_handler.rs  dbus_handler.rs  handle_network.rs  mod.rs  network_handler.rs  system_handler.rs  update_handler.rs
src/hardware/: display.rs  led.rs  mod.rs  rfid.rs
src/models/: constants.rs  interface.rs  mod.rs  notification_data.rs  notification_response.rs  user.rs  user_actions.rs  user_requests.rs  user_rfid.rs  websocket.rs  websocket_message.rs
src/network/: getifaddrs.rs  interfaces.rs  mod.rs  wifi_scan.rs
src/routes/: catcher.rs  mod.rs
src/websocket/: mod.rs
