[package]
name = "smarthub-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.4", features = ["sqlite", "r2d2", "chrono"] }
log = "0.4.20"

rocket = {version="0.5.0",features=["json"]}
rocket_contrib = "0.4.11"

rppal = "0.16.1"

serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"

thiserror = "1.0.51"

tokio = "1.35.1"
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.13.4"

toml = { version = "0.8.8", features = [] }
simplelog = "0.12.1"
rocket_ws = "0.1.0"
mfrc522 = "0.6.1"
anyhow = "1.0.76"
embedded-hal = "0.2.7"
linux-embedded-hal = "0.3.2"
