[package]
name = "smarthub-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.4", features = ["sqlite", "r2d2", "chrono"] }
log = "0.4.20"

rppal = "0.16.1"

serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"

thiserror = "1.0.51"

tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "process"] }
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.13.4"

toml = { version = "0.8.8", features = [] }
simplelog = "0.12.1"

mfrc522 = "0.6.1"
embedded-hal = "0.2.7"
linux-embedded-hal = "0.3.2"

tungstenite = "0.21.0"
tokio-tungstenite = "0.21.0"

futures-util = { version = "0.3.29", features = [] }
futures = "0.3.30"

dbus = "0.9.7"
once_cell = "1.19.0"
lazy_static = "1.4.0"
dbus-tokio = "0.7.6"
libc = { version = "0.2.151", features = [] }
