[package]
name = "smarthub-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.4", features = ["sqlite", "r2d2", "chrono"] }
log = "0.4.20"

rppal = "0.17.1"

serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"

thiserror = "1.0.51"

tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "process"] }
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.14.0"

toml = { version = "0.8.8", features = [] }
simplelog = "0.12.1"

mfrc522 = "0.7.0"
embedded-hal = "1.0.0"
linux-embedded-hal = "0.4.0"

futures-util = { version = "0.3.29", features = [] }
futures = "0.3.30"

dbus = {version = "0.9.7", features = ["vendored"]}
once_cell = "1.19.0"
lazy_static = "1.4.0"
dbus-tokio = "0.7.6"
libc = { version = "0.2.151", features = [] }
evdev = { version = "0.12.1", features = ["tokio"] }
embedded-hal-bus = "0.1.0"
http = "1.0.0"
axum = { version = "0.7.5", features = ["ws"] }
tower-http = { version = "0.5.2", features = ["cors"] }
